--- a/index.html
+++ b/index.html
@@ -403,10 +403,13 @@
         </div>
     </footer>
 
-    <!-- 图片模态框 -->
+    <!-- 图片模态框（灯箱）功能 -->
     <div id="imageModal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="modalImage">
+        <span class="close" aria-label="关闭">&times;</span>
+        <button class="modal-nav modal-prev" aria-label="上一张"><i class="fas fa-chevron-left"></i></button>
+        <img class="modal-content" id="modalImage" alt="预览大图">
+        <button class="modal-nav modal-next" aria-label="下一张"><i class="fas fa-chevron-right"></i></button>
+        <div class="modal-counter" id="modalCounter">1/1</div>
         <div class="modal-caption" id="modalCaption"></div>
     </div>
 
